bpy.types.Object.parent_bone not reset when clearing a bone parent #88498

Closed
opened 2021-05-23 10:51:13 +02:00 by Andreas · 13 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71

Blender Version
Broken: version: 2.92.0, branch: master, commit date: 2021-02-24 16:25, hash: 02948a2cab
Worked: (newest version of Blender that worked as expected)

Short description of error
I would expect that bpy.types.Object.parent==None implies that bpy.types.Object.parent_bone==None. This is not the case.

Exact steps for others to reproduce the error
Parent a mesh to a bone. Now .parent is set to the armature, and .parent_bone is set to the name of the bone.
Now clear the parent. This results in .parent being cleared, but .parent_bone is still the name of the previous bone parent.

Remarks
This is only relevant for the Python API and scripting. Everything in Blender and the UI probably works fine.

Unless there is a need to keep the old .parent_bone, the API would be a bit cleaner if it was reset properly. I imagine the changes required would be tiny, hopefully just one line.

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71 **Blender Version** Broken: version: 2.92.0, branch: master, commit date: 2021-02-24 16:25, hash: `02948a2cab` Worked: (newest version of Blender that worked as expected) **Short description of error** I would expect that `bpy.types.Object.parent==None` implies that `bpy.types.Object.parent_bone==None`. This is not the case. **Exact steps for others to reproduce the error** Parent a mesh to a bone. Now `.parent` is set to the armature, and `.parent_bone` is set to the name of the bone. Now clear the parent. This results in `.parent` being cleared, but `.parent_bone` is still the name of the previous bone parent. **Remarks** This is only relevant for the Python API and scripting. Everything in Blender and the UI probably works fine. Unless there is a need to keep the old `.parent_bone`, the API would be a bit cleaner if it was reset properly. I imagine the changes required would be tiny, hopefully just one line.

Added subscriber: @ndh

Added subscriber: @ndh

Added subscriber: @Azrael69

Added subscriber: @Azrael69

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

Cannot reproduce, this is what I get in both 2.92 and 3.0:

>>> C.active_object.parent_bone

'Bone'

>>> C.active_object.parent = None
>>> C.active_object.parent_bone

''

Does this happen in any file?
does this happen with factory Defaults? Please try with File → Defaults → Load Factory Settings to see if you still can reproduce this issue.
If this is specific to a file, please share that here.

Cannot reproduce, this is what I get in both 2.92 and 3.0: ``` >>> C.active_object.parent_bone 'Bone' >>> C.active_object.parent = None >>> C.active_object.parent_bone '' ``` Does this happen in any file? does this happen with factory Defaults? Please try with File → Defaults → Load Factory Settings to see if you still can reproduce this issue. If this is specific to a file, please share that here.

Changed status from 'Needs User Info' to: 'Archived'

Changed status from 'Needs User Info' to: 'Archived'

No activity for more than a week. As per the tracker policy we assume the issue is gone and can be closed.

Thanks again for the report. If the problem persists please open a new report with the required information.

No activity for more than a week. As per the tracker policy we assume the issue is gone and can be closed. Thanks again for the report. If the problem persists please open a new report with the required information.

@lichtwerk Sorry to keep you waiting!

Yes, it happens with the default scene. Here's the steps I did:

Create Armature
Select Cube
Shift select Armature
Pose mode
Parent Bone
Object mode
Select Cube
untitled.blend < Scene is here
Clear Parent

@lichtwerk Sorry to keep you waiting! Yes, it happens with the default scene. Here's the steps I did: Create Armature Select Cube Shift select Armature Pose mode Parent Bone Object mode Select Cube [untitled.blend](https://archive.blender.org/developer/F10157944/untitled.blend) < Scene is here Clear Parent
Philipp Oeser self-assigned this 2021-06-04 16:30:31 +02:00

Changed status from 'Archived' to: 'Confirmed'

Changed status from 'Archived' to: 'Confirmed'

In the case of the Clear Parent operator, I can confirm.

In the case of the `Clear Parent` operator, I can confirm.

This issue was referenced by 60dbbaac42

This issue was referenced by 60dbbaac42f5a0cf35ac488df4f051f355269cc1

This issue was referenced by dc8844f8ef

This issue was referenced by dc8844f8ef6a5cfa2be1035162d39e6d83c83d7c

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#88498
There is no content yet.